--- a/templates/travel.html
+++ b/templates/travel.html
@@ -8,7 +8,7 @@
         body{
             height: 100%;
             margin: 0;
-            background-image: url(cbd-when-travelling.jpeg);
+            background-image: url("{{ url_for('static', filename='images/cbd-when-travelling.jpeg') }}");
             background-size: cover;
         }
         header{
