--- a/templates/Blog Page.html
+++ b/templates/Blog Page.html
@@ -6,7 +6,7 @@
     <title>Blog Page</title>
     <style>
         body {
-            background-image: url(pngtree-silver-blog-abstract-image-background-image_734020.jpg);
+            background-image: url('images/pngtree-silver-blog-abstract-image-background-image_734020.jpg');
             background-size: cover;
             background-repeat: no-repeat;
             font-family: Arial, sans-serif;
