--- a/templates/registration.html
+++ b/templates/registration.html
@@ -8,6 +8,7 @@
         body {
             font-family: Arial, sans-serif;
             background-image: url("{{ url_for('static', filename='images/cbd-when-travelling.jpeg') }}");
+            background-image: url('images/cbd-when-travelling.jpeg');
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
